--- a/templates/fpm/pools/www.conf.j2
+++ b/templates/fpm/pools/www.conf.j2
@@ -20,8 +20,8 @@
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = {{ phpfpm.pool.files.www.entries.user }}
-group = {{ phpfpm.pool.files.www.entries.group }}
+user = {{ axelitus_php_fpm_pool_files.www.user }}
+group = {{ axelitus_php_fpm_pool_files.www.group }}
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -33,7 +33,7 @@ group = {{ phpfpm.pool.files.www.entries.group }}
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = {{ phpfpm.pool.files.www.entries.listen }}
+listen = {{ axelitus_php_fpm_pool_files.www.listen }}
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
@@ -59,7 +59,7 @@ listen.group = www-data
 ; must be separated by a comma. If this value is left blank, connections will be
 ; accepted from any ip address.
 ; Default Value: any
-listen.allowed_clients = {{ phpfpm.pool.files.www.entries.listen_allowed_clients }}
+listen.allowed_clients = {{ axelitus_php_fpm_pool_files.www.listen_allowed_clients }}
 
 ; Specify the nice(2) priority to apply to the pool processes (only if set)
 ; The value can vary from -19 (highest priority) to 20 (lower priority)
@@ -104,22 +104,22 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = {{ phpfpm.pool.files.www.entries.pm_max_children }}
+pm.max_children = {{ axelitus_php_fpm_pool_files.www.pm_max_children }}
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
-pm.start_servers = {{ phpfpm.pool.files.www.entries.pm_start_servers }}
+pm.start_servers = {{ axelitus_php_fpm_pool_files.www.pm_start_servers }}
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.min_spare_servers = {{ phpfpm.pool.files.www.entries.pm_min_spare_servers }}
+pm.min_spare_servers = {{ axelitus_php_fpm_pool_files.www.pm_min_spare_servers }}
 
 ; The desired maximum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.max_spare_servers = {{ phpfpm.pool.files.www.entries.pm_max_spare_servers }}
+pm.max_spare_servers = {{ axelitus_php_fpm_pool_files.www.pm_max_spare_servers }}
 
 ; The number of seconds after which an idle process will be killed.
 ; Note: Used only when pm is set to 'ondemand'
@@ -130,7 +130,7 @@ pm.max_spare_servers = {{ phpfpm.pool.files.www.entries.pm_max_spare_servers }}
 ; This can be useful to work around memory leaks in 3rd party libraries. For
 ; endless request processing specify '0'. Equivalent to PHP_FCGI_MAX_REQUESTS.
 ; Default Value: 0
-pm.max_requests = {{ phpfpm.pool.files.www.entries.pm_max_requests }}
+pm.max_requests = {{ axelitus_php_fpm_pool_files.www.pm_max_requests }}
 
 ; The URI to view the FPM status page. If this value is not set, no URI will be
 ; recognized as a status page. It shows the following informations:
@@ -315,13 +315,13 @@ pm.max_requests = {{ phpfpm.pool.files.www.entries.pm_max_requests }}
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-slowlog = {{ phpfpm.pool.files.www.entries.slowlog }}
+slowlog = {{ axelitus_php_fpm_pool_files.www.slowlog }}
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
-request_slowlog_timeout = {{ phpfpm.pool.files.www.entries.request_slowlog_timeout }}
+request_slowlog_timeout = {{ axelitus_php_fpm_pool_files.www.request_slowlog_timeout }}
 
 ; The timeout for serving a single request after which the worker process will
 ; be killed. This option should be used when the 'max_execution_time' ini option
